--- a/src/better_jupyter_mcp_server/config.toml
+++ b/src/better_jupyter_mcp_server/config.toml
@@ -20,7 +20,7 @@ MAX_WIDTH = 700
 # 图片最大高度
 # Maximum height of images
 MAX_HEIGHT = 700
-# 单个分块的pixiv
-# PIXIV token of a single chunk
-PIXIV_TOKEN = 28
+# 每TOKEN图片尺寸分块的单位大小(PIXIV)
+# Per-TOKEN image dimension block size (PIXIV)
+IMAGE_TOEKN_SIZE = 28
 
